AP-21398: Add online `WeightedMean` aggregate operator
AP-21398 (Row Aggregator miscalculates weighted average (wrong formula))